fixed the date on my resume for the guard

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -264,7 +264,7 @@ Reno, NV 89503
 \href{http://www.nv.ngb.army.mil/air/index.cfm}
      {\textbf{Staff Sergeant, Nevada Air National Guard}},\\
      Guidance and Control Shop, Avionics Flight, 152 MXS, Nevada Air National Guard\\
-     August 2006 - Present
+     August 2006 - February 2013 (Currently Inactive)
      \begin{outerlist}
      \item Instrumentation and Flight Controls Journeyman (2A553B).
      \item Maintenance and repair of USAF C-130 Guidance and Control Systems. Systems
