updated resume to reflect newer skills

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -264,7 +264,7 @@ Reno, NV 89503
 \href{http://www.nv.ngb.army.mil/air/index.cfm}
      {\textbf{Staff Sergeant, Nevada Air National Guard}},\\
      Guidance and Control Shop, Avionics Flight, 152 MXS, Nevada Air National Guard\\
-     August 2006 - February 2013 (Currently Inactive)
+     August 2006 - Present (Currently Inactive)
      \begin{outerlist}
      \item Instrumentation and Flight Controls Journeyman (2A553B).
      \item Maintenance and repair of USAF C-130 Guidance and Control Systems. Systems
@@ -318,19 +318,11 @@ Reno, NV
                    {Dr. George Bebis}
         \item Area of Interest: Computer Vision, Artificial Intelligence, Image Processing
         \item Specialized Undergraduate Courses: Computer Vision, Advanced Computer Vision, 
-              Artificial Intelligence, Simulation Physics, and Image Processing.\\
-        \end{innerlist}
-\item[] Masters of Science, 
-        \href{http://www.cse.unr.edu/}{Computer Science (Accelerated M.S./B.S. Program)}\\
-             (expected graduation date: May 2014)
-        \begin{innerlist}
-        \item Adviser:
-              \href{http://www.unr.edu/~bebis/}
-                   {Dr. George Bebis}
-        \item Research Topic: Human Face Sketch Recognition using Wavelets.
-        \item Courses Completed: Machine Learning, Computer Graphics\\
+              Artificial Intelligence, Simulation Physics, and Image Processing.
+        \item Graduate Courses Completed: Machine Learning, Computer Graphics.\\
         \end{innerlist}
 \end{outerlist}
+
 %UNITED STATES AIR FORCE
 \href{http://www.af.mil/}{\textbf{Nevada Air National Guard}}
 152 Maintenance Squadron, 152 Air Wing, Reno, NV
@@ -356,14 +348,22 @@ Reno, NV
 \section{Technical Skills}
 \begin{outerlist}
 
-\item{\textbf{Programming Languages/Tools}:} C++, Java, Python, C\#, Matlab, \LaTeX{}, Windows/Linux Scripting, some Haskell
+\item{\textbf{Programming Languages/Tools}:} C++, Java, Python, C\#, Matlab, \LaTeX{}, PowerShell, and Bash.
 
 \item{\textbf{Software Experience}:} 
    \begin{outerlist}
-   \item Computer Vision and Image Processing : OpenCV, Matlab, NASA Vision Workbench
+   \item Image Processing : OpenCV, Matlab, NASA Vision Workbench
    \item Numerical Computation : Numerical Python, Matlab, FLANN, LibSVM
-   \item Geographic Information Systems and Satellite Imagery : GDAL
+   \item GIS : GDAL, GeoServer, OpenLayers
+   \item Misc : Qt
    \end{outerlist}
+
+\item{\textbf{System Administration}:}
+    \begin{outerlist}
+    \item Implementation and compliance with Security Technical Implementation Guides
+    \item Deployment of Windows and Linux systems via configuration scripts.
+    \item Rapid deployment and configuration of build systems.  
+    \end{outerlist}
 
 \item{\textbf{Mechanical}:} Electronics repair, Soldering, Hand/Power Tools, use of 
                      Military/Civilian technical manuals and wiring diagrams.
