update resume to clarify SNC skills

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -220,7 +220,7 @@
 Reno, NV 89503
 & \textsl{Cell:} (775) 997-4261 \\          
 & \textsl{Fax:} (775) 784-1877 \\
-& \textsl{www: marvins.github.com}\\
+& \textsl{www: marvinsmith3.wordpress.com}\\
 & \textsl{Github: http://github.com/marvins}\\
 \end{tabular}
 
@@ -234,10 +234,17 @@ Reno, NV 89503
      Sierra Nevada Corporation, Sparks, NV\\
      January 2012 - Present
      \begin{outerlist}
-     \item Assisting on the software development and hardware 
+     \item Assisting on the software development and 
            integration teams for the Gorgon Stare Wide Area 
            Surveillance Program.
-     \item Particular tasks involve image processing, OS security compliance, some networking\\
+     \item Relevant Tasks:
+     \begin{innerlist}
+         \item Responsible for Information Assurance and compliance with DoD Security Technical Implementation Guides (STIGs) for Windows systems.
+         \item Responsible for Configuration Management of all Windows systems.
+         \item Assisting with Image Processing and Algorithm Development.
+         \item Assisting with development of technical data for project software and hardware.
+         \item Assisting with training of technician personnel for project software and hardware.\\
+     \end{innerlist}
      \end{outerlist}
 
 %NASA
@@ -264,7 +271,7 @@ Reno, NV 89503
 \href{http://www.nv.ngb.army.mil/air/index.cfm}
      {\textbf{Staff Sergeant, Nevada Air National Guard}},\\
      Guidance and Control Shop, Avionics Flight, 152 MXS, Nevada Air National Guard\\
-     August 2006 - Present (Currently Inactive)
+     August 2006 - Present
      \begin{outerlist}
      \item Instrumentation and Flight Controls Journeyman (2A553B).
      \item Maintenance and repair of USAF C-130 Guidance and Control Systems. Systems
@@ -354,21 +361,16 @@ Reno, NV
    \begin{outerlist}
    \item Image Processing : OpenCV, Matlab, NASA Vision Workbench
    \item Numerical Computation : Numerical Python, Matlab, FLANN, LibSVM
-   \item GIS : GDAL, GeoServer, OpenLayers
+   \item GIS : GDAL, GeoServer, OpenLayers, Google Earth Enterprise
    \item Misc : Qt
    \end{outerlist}
 
-\item{\textbf{System Administration}:}
-    \begin{outerlist}
-    \item Implementation and compliance with Security Technical Implementation Guides
-    \item Deployment of Windows and Linux systems via configuration scripts.
-    \item Rapid deployment and configuration of build systems.  
-    \end{outerlist}
+\item{\textbf{System Administration}:} Secure Configuration Management, software build systems, network infrastructure and troubleshooting.
 
 \item{\textbf{Mechanical}:} Electronics repair, Soldering, Hand/Power Tools, use of 
                      Military/Civilian technical manuals and wiring diagrams.
 
-\item{\textbf{Math}:} Multivariable Calculus, Linear Algebra, Signal Processing
+\item{\textbf{Math}:} Multivariable Calculus, Linear Algebra, some Signal Processing
 
 \end{outerlist}
 
