updated resume to include mba progress

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -311,6 +311,19 @@ Reno, NV 89503
 %                      EDUCATION
 %**************************************************************
 \section{Education}
+
+\href{http://www.unr.edu/}{\textbf{University of Nevada, Reno}},
+Reno, NV 
+\begin{outerlist}
+\item[] \href{http://www.unr.edu/degrees/business-administration/mba}
+        {Master of Business Administration}
+        (Expected Graduation: May 2016)
+        \begin{innerlist}
+        \item Interests: Project/Engineering Management\\
+        \end{innerlist}
+\end{outerlist}
+
+
 \href{http://www.unr.edu/}{\textbf{University of Nevada, Reno}},
 Reno, NV 
 \begin{outerlist}
