Updated resume and latex files.

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -219,9 +219,9 @@
 \href{mailto:marvin\_smith1@me.com}{marvin\_smith1@me.com}\\
 Reno, NV 89503
 & \textsl{Cell:} (775) 997-4261 \\          
-& \textsl{Fax:} (775) 784-1877 \\
 & \textsl{www: marvinsmith3.wordpress.com}\\
 & \textsl{Github: http://github.com/marvins}\\
+& \textsl{StackExchange: msmith81886}\\
 \end{tabular}
 
 %**************************************************************
@@ -237,13 +237,13 @@ Reno, NV 89503
      \item Assisting on the software development and 
            integration teams for the Gorgon Stare Wide Area 
            Surveillance Program.
-     \item Relevant Tasks:
+     \item Tasks:
      \begin{innerlist}
-         \item Responsible for Information Assurance and compliance with DoD Security Technical Implementation Guides (STIGs) for Windows systems.
-         \item Responsible for Configuration Management of all Windows systems.
-         \item Assisting with Image Processing and Algorithm Development.
-         \item Assisting with development of technical data for project software and hardware.
-         \item Assisting with training of technician personnel for project software and hardware.\\
+         \item Currently assisting with image processing and algorithm development for Wide Area Surveillance systems.
+         \item Implemented Information Assurance procedures and ensured compliance with DoD Security Technical Implementation Guides (STIGs) for Windows and Linux systems on our project.
+         \item Assisted with system configuration and network troubleshooting of Linux systems.
+         \item Assisted with development of technical data for project software and hardware.
+         \item Assisted with training of technician personnel for project software and hardware.\\
      \end{innerlist}
      \end{outerlist}
 
@@ -271,7 +271,7 @@ Reno, NV 89503
 \href{http://www.nv.ngb.army.mil/air/index.cfm}
      {\textbf{Staff Sergeant, Nevada Air National Guard}},\\
      Guidance and Control Shop, Avionics Flight, 152 MXS, Nevada Air National Guard\\
-     August 2006 - Present
+     August 2006 - February 2014
      \begin{outerlist}
      \item Instrumentation and Flight Controls Journeyman (2A553B).
      \item Maintenance and repair of USAF C-130 Guidance and Control Systems. Systems
@@ -319,7 +319,8 @@ Reno, NV
         {Master of Business Administration}
         (Expected Graduation: May 2016)
         \begin{innerlist}
-        \item Interests: Project/Engineering Management\\
+        \item Interests: Project/Engineering Management
+        \item Completed Courses:  Introduction to Patent Law\\
         \end{innerlist}
 \end{outerlist}
 
@@ -368,17 +369,17 @@ Reno, NV
 \section{Technical Skills}
 \begin{outerlist}
 
-\item{\textbf{Programming Languages/Tools}:} C++, Java, Python, C\#, Matlab, \LaTeX{}, PowerShell, and Bash.
+\item{\textbf{Programming Languages/Tools}:} C++, Python, Matlab, \LaTeX{}, PowerShell, and Bash.
 
 \item{\textbf{Software Experience}:} 
    \begin{outerlist}
    \item Image Processing : OpenCV, Matlab, NASA Vision Workbench
-   \item Numerical Computation : Numerical Python, Matlab, FLANN, LibSVM
-   \item GIS : GDAL, GeoServer, OpenLayers, Google Earth Enterprise
+   \item Numerical Computation : Numerical Python, FLANN, LibSVM
+   \item GIS : GDAL, GeoServer, OpenLayers, Google Earth Enterprise deployments
    \item Misc : Qt
    \end{outerlist}
 
-\item{\textbf{System Administration}:} Secure Configuration Management, software build systems, network infrastructure and troubleshooting.
+\item{\textbf{System Administration}:} Secure Configuration Management deployment (git, svn, Artifactory), constructing software build systems (Jenkins), and computer networking.
 
 \item{\textbf{Mechanical}:} Electronics repair, Soldering, Hand/Power Tools, use of 
                      Military/Civilian technical manuals and wiring diagrams.
@@ -412,18 +413,18 @@ International Symposium on Visual Computing, 2010.
 %**************************************************************
 \section{References}
 \begin{itemize}
-\item Samuel Hancock\\
-      Technical Director, Sierra Nevada Corporation\\
-      Phone: 775-849-6244
-\item Master Sergeant Jon Wolland\\
-      Guidance and Control Shop Supervisor, 152 MXS, NVANG\\
-      Phone: 775-788-4565
+%\item Samuel Hancock\\
+%      Technical Director, Sierra Nevada Corporation\\
+%      Phone: 775-849-6244
 \item Dr. George Bebis\\
-      Professor of Computer Science and UNR Computer Vision Lab Director\\
+      Chair, Department of Computer Science and UNR Computer Vision Lab Director\\
       Phone: 775-784-6463
 \item Dr. Ara Nefian\\
       Senior Research Scientist, NASA Ames Research Center\\
       Phone: 650-604-0845
+\item Master Sergeant Jon Wolland\\
+      Guidance and Control Shop Supervisor, 152 MXS, NVANG\\
+      Phone: 775-788-4565
 \end{itemize}
 \end{document}
 
