--- a/README
+++ b/README
@@ -1,8 +1,4 @@
-This is a collection of junk that I find useful in my day-to-day activities.  Feel free
-to borrow, steal, improve or gripe about anything here.  I probably got it from someone
-else while creating it. 
+This is a collection of junk that I find useful in my day-to-day activities.  Feel free to borrow, steal, improve or gripe about anything here.  I probably got it from someone else while creating it. 
 
-I have my Project Euler solutions, example code snippits for different libraries, 
-vim configuration files, alpine configuration files, and more.  If there is anything that I 
-should add, just let me know. 
+I have my Project Euler solutions, example code snippits for different libraries, vim configuration files, alpine configuration files, and more.  If there is anything that I should add, just let me know. 
     
