minor update to resume.  odd phrasing.

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -230,7 +230,7 @@ Reno, NV 89503
 \section{Work Experience}
 %SNC
 \href{http://www.sncorp.com}{
-     \textbf{Software Engineer, ISR Group}}\\
+     \textbf{Software Engineer, ISR Division}}\\
      Sierra Nevada Corporation, Sparks, NV\\
      January 2012 - Present
      \begin{outerlist}
@@ -240,7 +240,7 @@ Reno, NV 89503
      \item Tasks:
      \begin{innerlist}
          \item Currently assisting with image processing and algorithm development for Wide Area Surveillance systems.
-         \item Implemented Information Assurance procedures and ensured compliance with DoD Security Technical Implementation Guides (STIGs) for Windows and Linux systems on our project.
+         \item Assisted with development of Information Assurance procedures and ensured compliance with DoD Security Technical Implementation Guides (STIGs) for Windows and Linux systems on our project.
          \item Assisted with system configuration and network troubleshooting of Linux systems.
          \item Assisted with development of technical data for project software and hardware.
          \item Assisted with training of technician personnel for project software and hardware.\\
@@ -317,7 +317,7 @@ Reno, NV
 \begin{outerlist}
 \item[] \href{http://www.unr.edu/degrees/business-administration/mba}
         {Master of Business Administration}
-        (Expected Graduation: May 2016)
+        (Expected Graduation: May 2016)(Just starting)
         \begin{innerlist}
         \item Interests: Project/Engineering Management
         \item Completed Courses:  Introduction to Patent Law\\
@@ -374,17 +374,14 @@ Reno, NV
 \item{\textbf{Software Experience}:} 
    \begin{outerlist}
    \item Image Processing : OpenCV, Matlab, NASA Vision Workbench
-   \item Numerical Computation : Numerical Python, FLANN, LibSVM
    \item GIS : GDAL, GeoServer, OpenLayers, Google Earth Enterprise deployments
    \item Misc : Qt
    \end{outerlist}
 
-\item{\textbf{System Administration}:} Secure Configuration Management deployment (git, svn, Artifactory), constructing software build systems (Jenkins), and computer networking.
+\item{\textbf{System Administration}:} Secure Configuration Management deployment (git, svn, Artifactory), constructing software build systems (Jenkins), and some computer networking.
 
 \item{\textbf{Mechanical}:} Electronics repair, Soldering, Hand/Power Tools, use of 
                      Military/Civilian technical manuals and wiring diagrams.
-
-\item{\textbf{Math}:} Multivariable Calculus, Linear Algebra, some Signal Processing
 
 \end{outerlist}
 
