--- a/python/UberTool/README
+++ b/python/UberTool/README
@@ -1,6 +1,6 @@
 UberTool
 --------
 
-A simple set of utilities in a really easy to use plugin architecture.
+A simple set of utilities in a (hopefully) really easy to use plugin architecture.
 
 
