--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -221,7 +221,6 @@ Reno, NV 89503
 & \textsl{Cell:} (775) 997-4261 \\          
 & \textsl{www: marvinsmith3.wordpress.com}\\
 & \textsl{Github: http://github.com/marvins}\\
-& \textsl{StackExchange: msmith81886}\\
 \end{tabular}
 
 %**************************************************************
@@ -240,8 +239,9 @@ Reno, NV 89503
      \item Tasks:
      \begin{innerlist}
          \item Currently assisting with image processing and algorithm development for Wide Area Surveillance systems.
-         \item Assisted with development of Information Assurance procedures and ensured compliance with DoD Security Technical Implementation Guides (STIGs) for Windows and Linux systems on our project.
-         \item Assisted with system configuration and network troubleshooting of Linux systems.
+         \item Assisted with development of Information Assurance procedures and ensured compliance with DoD Security 
+               Technical Implementation Guides (STIGs) for Windows and Linux systems on our project.
+         \item Assisted with system integration and troubleshooting of Windows and Linux systems.
          \item Assisted with development of technical data for project software and hardware.
          \item Assisted with training of technician personnel for project software and hardware.\\
      \end{innerlist}
@@ -307,6 +307,30 @@ Reno, NV 89503
            COTS electronic solutions with Mil-Std and SAE requirements, 
            as well as bench-tested electronic systems prior to installation.
      \end{outerlist}
+
+%**************************************************************
+%                     TECHNICAL SKILLS
+%*************************************************************
+\section{Technical Skills}
+\begin{outerlist}
+
+\item{\textbf{Programming Languages/Tools}:} C++, Python, Matlab, \LaTeX{}, PowerShell, and Bash.
+
+\item{\textbf{Software Experience}:} 
+   \begin{outerlist}
+   \item Image Processing : OpenCV, Matlab, NASA Vision Workbench
+   \item GIS : GDAL, GeoServer, OpenLayers, Google Earth Enterprise deployments
+   \item Misc : Qt
+   \end{outerlist}
+
+\item{\textbf{System Administration}:} Secure Configuration Management deployment (git, svn, Artifactory), constructing software build systems (Jenkins), and some computer networking.
+
+\item{\textbf{Mechanical}:} Electronics repair, Soldering, Hand/Power Tools, use of 
+                     Military/Civilian technical manuals and wiring diagrams.
+
+\end{outerlist}
+
+
 %**************************************************************
 %                      EDUCATION
 %**************************************************************
@@ -350,7 +374,7 @@ Reno, NV
 \begin{outerlist}
 \item[] 2A553B, {Instrumentation and Flight Controls Journeyman}
         \begin{innerlist}
-        \item Instrumentation and Flight Controls Craftsman Course, (Currently Taking)
+        \item Instrumentation and Flight Controls Craftsman Course
         \item Airman Leadership School, Correspondance, May 2011
         \item Instrumentation and Flight Controls Apprentice School,\\
         \href{http://www.sheppard.af.mil/}
@@ -363,27 +387,7 @@ Reno, NV
              {Lackland Air Force Base, TX}, November 2006\\
         \end{innerlist}
 \end{outerlist}
-%**************************************************************
-%                     TECHNICAL SKILLS
-%*************************************************************
-\section{Technical Skills}
-\begin{outerlist}
 
-\item{\textbf{Programming Languages/Tools}:} C++, Python, Matlab, \LaTeX{}, PowerShell, and Bash.
-
-\item{\textbf{Software Experience}:} 
-   \begin{outerlist}
-   \item Image Processing : OpenCV, Matlab, NASA Vision Workbench
-   \item GIS : GDAL, GeoServer, OpenLayers, Google Earth Enterprise deployments
-   \item Misc : Qt
-   \end{outerlist}
-
-\item{\textbf{System Administration}:} Secure Configuration Management deployment (git, svn, Artifactory), constructing software build systems (Jenkins), and some computer networking.
-
-\item{\textbf{Mechanical}:} Electronics repair, Soldering, Hand/Power Tools, use of 
-                     Military/Civilian technical manuals and wiring diagrams.
-
-\end{outerlist}
 
 %**************************************************************
 %                     PUBLICATIONS
