--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -233,14 +233,14 @@ Reno, NV 89503
      Sierra Nevada Corporation, Sparks, NV\\
      January 2012 - Present
      \begin{outerlist}
-     \item Assisting on the software development and 
-           integration teams for the Gorgon Stare Wide Area 
+     \item Working on the Gorgon Stare Wide Area 
            Surveillance Program.
      \item Tasks:
      \begin{innerlist}
-         \item Currently assisting with image processing and algorithm development for Wide Area Surveillance systems.
-         \item Assisted with development of Information Assurance procedures and ensured compliance with DoD Security 
-               Technical Implementation Guides (STIGs) for Windows and Linux systems on our project.
+         \item Currently assisting with image processing and algorithm development for wide-area surveillance systems.  
+               Primary focus is in camera calibration, orthographic rectification, and photogrammetry. 
+         \item Assisted with development of OS security hardening procedures and ensured compliance with DoD Security 
+               Technical Implementation Guides (STIGs) for Windows and Linux systems.
          \item Assisted with system integration and troubleshooting of Windows and Linux systems.
          \item Assisted with development of technical data for project software and hardware.
          \item Assisted with training of technician personnel for project software and hardware.\\
