Updated Resume with MPI changes.

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -291,8 +291,7 @@ Reno, NV 89503
      \begin{outerlist}
      \item Teaching Assistant
         \begin{innerlist}
-        \item CS 302, Data Structures: CS 474, Image Processing: CS 485, Computer Vision
-        \item Instructor: Dr. George Bebis\\
+        \item CS 302, Data Structures: CS 474, Image Processing: CS 485, Computer Vision\\
         \end{innerlist}
      \end{outerlist}
 %NATC
@@ -320,7 +319,7 @@ Reno, NV 89503
    \begin{outerlist}
    \item Image Processing : OpenCV, Matlab, NASA Vision Workbench
    \item GIS : GDAL, GeoServer, OpenLayers, Google Earth Enterprise deployments
-   \item Misc : Qt
+   \item Misc : Qt, MPI, some Cuda
    \end{outerlist}
 
 \item{\textbf{System Administration}:} Secure Configuration Management deployment (git, svn, Artifactory), constructing software build systems (Jenkins), and some computer networking.
