Fixed typo in resume.

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -301,7 +301,7 @@ Reno, NV 89503
      May 2009 - January 2009
      \begin{outerlist}
      \item Primary task was to aid in the testing and implementation of electronic systems for
-           the USMC Marine Personnel Carrier Technology Demonstrator vechicle.
+           the USMC Marine Personnel Carrier Technology Demonstrator vehicle.
      \item Wrote feasibility reports on electrical systems used, researched and compared
            COTS electronic solutions with Mil-Std and SAE requirements, 
            as well as bench-tested electronic systems prior to installation.
