Added python and Distributed computing to resume.

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -238,7 +238,7 @@ Reno, NV 89503
      \item Tasks:
      \begin{innerlist}
          \item Currently assisting with image processing and algorithm development for wide-area surveillance systems.  
-               Primary focus is in camera calibration, orthographic rectification, and photogrammetry. 
+               Primary focuses are in distributed computing, camera calibration, orthographic rectification, and photogrammetry. 
          \item Assisted with development of OS security hardening procedures and ensured compliance with DoD Security 
                Technical Implementation Guides (STIGs) for Windows and Linux systems.
          \item Assisted with system integration and troubleshooting of Windows and Linux systems.
@@ -319,6 +319,7 @@ Reno, NV 89503
    \begin{outerlist}
    \item Image Processing : OpenCV, Matlab, NASA Vision Workbench
    \item GIS : GDAL, GeoServer, OpenLayers, Google Earth Enterprise deployments
+   \item Python : pyqt, matplotlib, SciPy, NumPy, SymPy
    \item Misc : Qt, MPI, some Cuda
    \end{outerlist}
 
