--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -233,8 +233,11 @@ Reno, NV 89503
      Sierra Nevada Corporation, Sparks, NV\\
      January 2012 - Present
      \begin{outerlist}
-     \item Working on the Gorgon Stare Wide Area 
-           Surveillance Program.
+     \item Projects:
+        \begin{innerlist}
+        \item Research and Development
+        \item Gorgon Stare Wide-Area Surveillance Program
+        \end{innerlist}
      \item Tasks:
      \begin{innerlist}
          \item Currently assisting with image processing and algorithm development for wide-area surveillance systems.  
