Adding basic mpi demo for dynamic windows.

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -323,7 +323,7 @@ Reno, NV 89503
    \item Image Processing : OpenCV, Matlab, NASA Vision Workbench
    \item GIS : GDAL, GeoServer, OpenLayers, Google Earth Enterprise deployments
    \item Python : pyqt, matplotlib, SciPy, NumPy, SymPy
-   \item Misc : Qt, MPI, some Cuda
+   \item Misc : C++ Template Metaprogramming, Qt, MPI, some Cuda
    \end{outerlist}
 
 \item{\textbf{System Administration}:} Secure Configuration Management deployment (git, svn, Artifactory), constructing software build systems (Jenkins), and some computer networking.
