--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -244,8 +244,6 @@ Reno, NV 89503
                Primary focuses are in distributed computing, camera calibration, orthographic rectification, and photogrammetry. 
          \item Assisted with development of OS security hardening procedures and ensured compliance with DoD Security 
                Technical Implementation Guides (STIGs) for Windows and Linux systems.
-         \item Assisted with system integration and troubleshooting of Windows and Linux systems.
-         \item Assisted with development of technical data for project software and hardware.
          \item Assisted with training of technician personnel for project software and hardware.\\
      \end{innerlist}
      \end{outerlist}
@@ -339,18 +337,6 @@ Reno, NV 89503
 %**************************************************************
 \section{Education}
 
-\href{http://www.unr.edu/}{\textbf{University of Nevada, Reno}},
-Reno, NV 
-\begin{outerlist}
-\item[] \href{http://www.unr.edu/degrees/business-administration/mba}
-        {Master of Business Administration}
-        (Expected Graduation: May 2016)(Just starting)
-        \begin{innerlist}
-        \item Interests: Project/Engineering Management
-        \item Completed Courses:  Introduction to Patent Law\\
-        \end{innerlist}
-\end{outerlist}
-
 
 \href{http://www.unr.edu/}{\textbf{University of Nevada, Reno}},
 Reno, NV 
@@ -367,7 +353,7 @@ Reno, NV
         \item Area of Interest: Computer Vision, Artificial Intelligence, Image Processing
         \item Specialized Undergraduate Courses: Computer Vision, Advanced Computer Vision, 
               Artificial Intelligence, Simulation Physics, and Image Processing.
-        \item Graduate Courses Completed: Machine Learning, Computer Graphics.\\
+        \item Graduate Courses Completed: Machine Learning, Computer Graphics, Patent Law (Business School).\\
         \end{innerlist}
 \end{outerlist}
 
