--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -248,6 +248,22 @@ Reno, NV 89503
      \end{innerlist}
      \end{outerlist}
 
+%USAF
+\href{http://www.nv.ngb.army.mil/air/index.cfm}
+     {\textbf{Staff Sergeant, Nevada Air National Guard}},\\
+     Guidance and Control Shop, Avionics Flight, 152 MXS, Nevada Air National Guard\\
+     August 2006 - August 2012
+     \begin{outerlist}
+     \item Instrumentation and Flight Controls Journeyman (2A553B).
+     \item Maintenance and repair of USAF C-130 Guidance and Control Systems. Systems
+           include Engine Instrumentation, Autopilot, Fuel Quantity,
+           Digital Flight Data Recorder, and Flight Director.
+     \item Operation Enduring Freedom Deployment, Bagram AB, Afghanistan\\     
+           August 2009 - December 2009
+     \item Operation Iraqi Freedom Deployment, Talil AB, Iraq\\               
+           October 2007 - January 2008
+     \item Active Security Clearance\\
+     \end{outerlist}
 %NASA
 \href{http://ti.arc.nasa.gov/tech/asr/intelligent-robotics/}
      {\textbf{Intern, Intelligent Robotics Group, NASA Ames Research Center}},\\
@@ -268,22 +284,7 @@ Reno, NV 89503
             which removes outliers from stereo reconstructions of the lunar surface.\\
       \end{innerlist}
       \end{outerlist}
-%USAF
-\href{http://www.nv.ngb.army.mil/air/index.cfm}
-     {\textbf{Staff Sergeant, Nevada Air National Guard}},\\
-     Guidance and Control Shop, Avionics Flight, 152 MXS, Nevada Air National Guard\\
-     August 2006 - February 2014
-     \begin{outerlist}
-     \item Instrumentation and Flight Controls Journeyman (2A553B).
-     \item Maintenance and repair of USAF C-130 Guidance and Control Systems. Systems
-           include Engine Instrumentation, Autopilot, Fuel Quantity,
-           Digital Flight Data Recorder, and Flight Director.
-     \item Operation Enduring Freedom Deployment, Bagram AB, Afghanistan\\     
-           August 2009 - December 2009
-     \item Operation Iraqi Freedom Deployment, Talil AB, Iraq\\               
-           October 2007 - January 2008
-     \item Active Security Clearance\\
-     \end{outerlist}
+
 %CVL
 \href{http://www.cse.unr.edu/CVL/}
      {\textbf{Undergraduate Assistant, Computer Vision Lab}},\\
@@ -403,16 +404,16 @@ International Symposium on Visual Computing, 2010.
 %**************************************************************
 \section{References}
 \begin{itemize}
-%\item Samuel Hancock\\
-%      Technical Director, Sierra Nevada Corporation\\
-%      Phone: 775-849-6244
+\item Samuel Hancock\\
+      Technical Director, Sierra Nevada Corporation\\
+      Phone: 775-849-6244
 \item Dr. George Bebis\\
       Chair, Department of Computer Science and UNR Computer Vision Lab Director\\
       Phone: 775-784-6463
 \item Dr. Ara Nefian\\
       Senior Research Scientist, NASA Ames Research Center\\
       Phone: 650-604-0845
-\item Master Sergeant Jon Wolland\\
+\item Technical Sergeant Rebecca Varnum\\
       Guidance and Control Shop Supervisor, 152 MXS, NVANG\\
       Phone: 775-788-4565
 \end{itemize}
