--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -319,10 +319,10 @@ Reno, NV 89503
 
 \item{\textbf{Software Experience}:} 
    \begin{outerlist}
-   \item Image Processing : OpenCV, Matlab, NASA Vision Workbench
+   \item Image Processing : OpenCV (contributor), Matlab, NASA Vision Workbench
    \item GIS : GDAL, GeoServer, OpenLayers, Google Earth Enterprise deployments
-   \item Python : pyqt, matplotlib, SciPy, NumPy, SymPy
-   \item Misc : C++ Template Metaprogramming, Qt, MPI, some Cuda
+   \item Distributed Computing : MPI, IBVerbs/RDMA, Infiniband, sockets
+   \item Python : matplotlib, NumPy, SymPy, pyqt
    \end{outerlist}
 
 \item{\textbf{System Administration}:} Secure Configuration Management deployment (git, svn, Artifactory), constructing software build systems (Jenkins), and some computer networking.
