Removing Project Euler code.

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -389,6 +389,11 @@ Reno, NV
 International Symposium on Visual Computing, 2010.
 \end{outerlist}
 
+\begin{outerlist}
+\item Technical Reviewer
+\end{outerlist}
+
+
 %**************************************************************
 %                      GROUPS
 %**************************************************************
