removing old junk

--- a/latex/Resume/resume.tex
+++ b/latex/Resume/resume.tex
@@ -219,8 +219,9 @@
 \href{mailto:marvin\_smith1@me.com}{marvin\_smith1@me.com}\\
 Reno, NV 89503
 & \textsl{Cell:} (775) 997-4261 \\          
-& \textsl{www:} \href{marvinsmith3.wordpress.com}{marvinsmith3.wordpress.com}\\
+& \textsl{www:} \href{http://marvinsmith3.wordpress.com}{http://marvinsmith3.wordpress.com}\\
 & \textsl{Github:} \href{http://github.com/marvins}{http://github.com/marvins}\\
+%& \textsl{StackOverflow:} \href{https://careers.stackoverflow.com/msmith81886}{https://careers.stackoverflow.com/msmith81886}\\
 \end{tabular}
 
 %**************************************************************
